@@ -833,7 +833,7 @@ class P4A extends P4A_Object
 		if ($this->_popup) {
 			return p4a_mask::singleton($this->_popup)->focus_object_id;
 		}
-		return $this->active_mask->focus_object_id;
+		return $this->active_mask->getFocusedObjectId();
 	}
 	
 	/**
